DynAbs/src/DynAbs/Summaries/SummariesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\alexd\Desktop\Slicer\DynAbs\src\DynAbs.Summaries\Summaries.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace DynAbs.Summaries
{
	using Antlr4.Runtime;
	using Antlr4.Runtime.Atn;
	using Antlr4.Runtime.Misc;
	using Antlr4.Runtime.Tree;
	using System.Collections.Generic;
	using DFA = Antlr4.Runtime.Dfa.DFA;

	[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
	[System.CLSCompliant(false)]
	public partial class SummariesParser : Parser
	{
		public const int
			T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, SEPARATION = 12, NULL = 13, FRESH = 14, ISIN = 15, SINGLE = 16,
			MANY = 17, ANY = 18, RECEIVER = 19, PARAMS = 20, GLOBALS = 21, RETURNVALUE = 22, REACHABLEOBJ = 23,
			UNTILTYPE = 24, OFTYPE = 25, OFKIND = 26, NUMBER = 27, NEWLINE = 28, WORD = 29;
		public const int
			RULE_s = 0, RULE_rv = 1, RULE_ro = 2, RULE_r = 3, RULE_w = 4, RULE_cn = 5,
			RULE_null = 6, RULE_fresh = 7, RULE_isIn = 8, RULE_singleMany = 9, RULE_single = 10,
			RULE_many = 11, RULE_types = 12, RULE_type = 13, RULE_kinds = 14, RULE_kind = 15,
			RULE_words = 16, RULE_elementType = 17, RULE_parametricType = 18, RULE_field = 19,
			RULE_anyField = 20, RULE_mc = 21, RULE_c = 22, RULE_metf = 23, RULE_etf = 24,
			RULE_fa = 25, RULE_met = 26, RULE_et = 27, RULE_bf = 28, RULE_b = 29,
			RULE_f = 30, RULE_filter = 31, RULE_filterT = 32, RULE_filterUT = 33,
			RULE_filterOT = 34, RULE_filterOK = 35, RULE_number = 36;
		public static readonly string[] ruleNames = {
		"s", "rv", "ro", "r", "w", "cn", "null", "fresh", "isIn", "singleMany",
		"single", "many", "types", "type", "kinds", "kind", "words", "elementType",
		"parametricType", "field", "anyField", "mc", "c", "metf", "etf", "fa",
		"met", "et", "bf", "b", "f", "filter", "filterT", "filterUT", "filterOT",
		"filterOK", "number"
	};

		private static readonly string[] _LiteralNames = {
		null, "'{}'", "'{'", "'}'", "'{|'", "'|'", "';'", "', '", "'@'", "'['",
		"']'", "'*'", "'.'", "'Null'", "'Fresh'", "'IsIn'", "'Single'", "'Many'",
		"'?'", "'R'", "'P'", "'G'", "'RV'", "'RO'", "'UntilType'", "'OfType'",
		"'OfKind'"
	};
		private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null,
		"SEPARATION", "NULL", "FRESH", "ISIN", "SINGLE", "MANY", "ANY", "RECEIVER",
		"PARAMS", "GLOBALS", "RETURNVALUE", "REACHABLEOBJ", "UNTILTYPE", "OFTYPE",
		"OFKIND", "NUMBER", "NEWLINE", "WORD"
	};
		public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

		[System.Obsolete("Use Vocabulary instead.")]
		public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

		private static string[] GenerateTokenNames(IVocabulary vocabulary, int length)
		{
			string[] tokenNames = new string[length];
			for (int i = 0; i < tokenNames.Length; i++)
			{
				tokenNames[i] = vocabulary.GetLiteralName(i);
				if (tokenNames[i] == null)
				{
					tokenNames[i] = vocabulary.GetSymbolicName(i);
				}

				if (tokenNames[i] == null)
				{
					tokenNames[i] = "<INVALID>";
				}
			}

			return tokenNames;
		}

		[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
		public override string[] TokenNames
		{
			get
			{
				return tokenNames;
			}
		}

		[NotNull]
		public override IVocabulary Vocabulary
		{
			get
			{
				return DefaultVocabulary;
			}
		}

		public override string GrammarFileName { get { return "Summaries.g4"; } }

		public override string[] RuleNames { get { return ruleNames; } }

		public override string SerializedAtn { get { return _serializedATN; } }

		public SummariesParser(ITokenStream input)
			: base(input)
		{
			_interp = new ParserATNSimulator(this, _ATN);
		}
		public partial class SContext : ParserRuleContext
		{
			public RvContext rv()
			{
				return GetRuleContext<RvContext>(0);
			}
			public ITerminalNode[] SEPARATION() { return GetTokens(SummariesParser.SEPARATION); }
			public ITerminalNode SEPARATION(int i)
			{
				return GetToken(SummariesParser.SEPARATION, i);
			}
			public RoContext ro()
			{
				return GetRuleContext<RoContext>(0);
			}
			public RContext r()
			{
				return GetRuleContext<RContext>(0);
			}
			public WContext w()
			{
				return GetRuleContext<WContext>(0);
			}
			public CnContext cn()
			{
				return GetRuleContext<CnContext>(0);
			}
			public ITerminalNode Eof() { return GetToken(SummariesParser.Eof, 0); }
			public SContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_s; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterS(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitS(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitS(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public SContext s()
		{
			SContext _localctx = new SContext(_ctx, State);
			EnterRule(_localctx, 0, RULE_s);
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 74; rv();
					State = 75; Match(SEPARATION);
					State = 76; ro();
					State = 77; Match(SEPARATION);
					State = 78; r();
					State = 79; Match(SEPARATION);
					State = 80; w();
					State = 81; Match(SEPARATION);
					State = 82; cn();
					State = 84;
					_errHandler.Sync(this);
					switch (Interpreter.AdaptivePredict(_input, 0, _ctx))
					{
						case 1:
							{
								State = 83; Match(Eof);
							}
							break;
					}
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class RvContext : ParserRuleContext
		{
			public NullContext @null()
			{
				return GetRuleContext<NullContext>(0);
			}
			public FreshContext fresh()
			{
				return GetRuleContext<FreshContext>(0);
			}
			public IsInContext isIn()
			{
				return GetRuleContext<IsInContext>(0);
			}
			public RvContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_rv; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterRv(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitRv(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitRv(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public RvContext rv()
		{
			RvContext _localctx = new RvContext(_ctx, State);
			EnterRule(_localctx, 2, RULE_rv);
			try
			{
				State = 89;
				_errHandler.Sync(this);
				switch (_input.La(1))
				{
					case NULL:
						EnterOuterAlt(_localctx, 1);
						{
							State = 86; @null();
						}
						break;
					case FRESH:
						EnterOuterAlt(_localctx, 2);
						{
							State = 87; fresh();
						}
						break;
					case ISIN:
						EnterOuterAlt(_localctx, 3);
						{
							State = 88; isIn();
						}
						break;
					default:
						throw new NoViableAltException(this);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class RoContext : ParserRuleContext
		{
			public SingleManyContext singleMany()
			{
				return GetRuleContext<SingleManyContext>(0);
			}
			public RoContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_ro; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterRo(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitRo(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitRo(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public RoContext ro()
		{
			RoContext _localctx = new RoContext(_ctx, State);
			EnterRule(_localctx, 4, RULE_ro);
			try
			{
				State = 96;
				_errHandler.Sync(this);
				switch (_input.La(1))
				{
					case T__0:
						EnterOuterAlt(_localctx, 1);
						{
							State = 91; Match(T__0);
						}
						break;
					case T__1:
						EnterOuterAlt(_localctx, 2);
						{
							State = 92; Match(T__1);
							State = 93; singleMany();
							State = 94; Match(T__2);
						}
						break;
					default:
						throw new NoViableAltException(this);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class RContext : ParserRuleContext
		{
			public MetfContext metf()
			{
				return GetRuleContext<MetfContext>(0);
			}
			public RContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_r; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterR(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitR(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitR(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public RContext r()
		{
			RContext _localctx = new RContext(_ctx, State);
			EnterRule(_localctx, 6, RULE_r);
			try
			{
				State = 103;
				_errHandler.Sync(this);
				switch (_input.La(1))
				{
					case T__0:
						EnterOuterAlt(_localctx, 1);
						{
							State = 98; Match(T__0);
						}
						break;
					case T__1:
						EnterOuterAlt(_localctx, 2);
						{
							State = 99; Match(T__1);
							State = 100; metf();
							State = 101; Match(T__2);
						}
						break;
					default:
						throw new NoViableAltException(this);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class WContext : ParserRuleContext
		{
			public MetfContext metf()
			{
				return GetRuleContext<MetfContext>(0);
			}
			public WContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_w; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterW(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitW(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitW(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public WContext w()
		{
			WContext _localctx = new WContext(_ctx, State);
			EnterRule(_localctx, 8, RULE_w);
			try
			{
				State = 110;
				_errHandler.Sync(this);
				switch (_input.La(1))
				{
					case T__0:
						EnterOuterAlt(_localctx, 1);
						{
							State = 105; Match(T__0);
						}
						break;
					case T__1:
						EnterOuterAlt(_localctx, 2);
						{
							State = 106; Match(T__1);
							State = 107; metf();
							State = 108; Match(T__2);
						}
						break;
					default:
						throw new NoViableAltException(this);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class CnContext : ParserRuleContext
		{
			public McContext mc()
			{
				return GetRuleContext<McContext>(0);
			}
			public CnContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_cn; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterCn(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitCn(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitCn(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public CnContext cn()
		{
			CnContext _localctx = new CnContext(_ctx, State);
			EnterRule(_localctx, 10, RULE_cn);
			try
			{
				State = 117;
				_errHandler.Sync(this);
				switch (_input.La(1))
				{
					case T__0:
						EnterOuterAlt(_localctx, 1);
						{
							State = 112; Match(T__0);
						}
						break;
					case T__1:
						EnterOuterAlt(_localctx, 2);
						{
							State = 113; Match(T__1);
							State = 114; mc();
							State = 115; Match(T__2);
						}
						break;
					default:
						throw new NoViableAltException(this);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class NullContext : ParserRuleContext
		{
			public ITerminalNode NULL() { return GetToken(SummariesParser.NULL, 0); }
			public NullContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_null; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterNull(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitNull(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitNull(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public NullContext @null()
		{
			NullContext _localctx = new NullContext(_ctx, State);
			EnterRule(_localctx, 12, RULE_null);
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 119; Match(NULL);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class FreshContext : ParserRuleContext
		{
			public ITerminalNode FRESH() { return GetToken(SummariesParser.FRESH, 0); }
			public TypesContext types()
			{
				return GetRuleContext<TypesContext>(0);
			}
			public KindContext kind()
			{
				return GetRuleContext<KindContext>(0);
			}
			public FreshContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_fresh; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterFresh(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitFresh(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitFresh(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public FreshContext fresh()
		{
			FreshContext _localctx = new FreshContext(_ctx, State);
			EnterRule(_localctx, 14, RULE_fresh);
			try
			{
				State = 139;
				_errHandler.Sync(this);
				switch (Interpreter.AdaptivePredict(_input, 6, _ctx))
				{
					case 1:
						EnterOuterAlt(_localctx, 1);
						{
							State = 121; Match(FRESH);
						}
						break;

					case 2:
						EnterOuterAlt(_localctx, 2);
						{
							State = 122; Match(FRESH);
							State = 123; Match(T__1);
							State = 124; types();
							State = 125; Match(T__2);
						}
						break;

					case 3:
						EnterOuterAlt(_localctx, 3);
						{
							State = 127; Match(FRESH);
							State = 128; Match(T__3);
							State = 129; kind();
							State = 130; Match(T__2);
						}
						break;

					case 4:
						EnterOuterAlt(_localctx, 4);
						{
							State = 132; Match(FRESH);
							State = 133; Match(T__1);
							State = 134; types();
							State = 135; Match(T__4);
							State = 136; kind();
							State = 137; Match(T__2);
						}
						break;
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class IsInContext : ParserRuleContext
		{
			public ITerminalNode ISIN() { return GetToken(SummariesParser.ISIN, 0); }
			public MetContext met()
			{
				return GetRuleContext<MetContext>(0);
			}
			public IsInContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_isIn; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterIsIn(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitIsIn(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitIsIn(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public IsInContext isIn()
		{
			IsInContext _localctx = new IsInContext(_ctx, State);
			EnterRule(_localctx, 16, RULE_isIn);
			try
			{
				EnterOuterAlt(_localctx, 1);
				{
					State = 141; Match(ISIN);
					State = 142; Match(T__1);
					State = 143; met();
					State = 144; Match(T__2);
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class SingleManyContext : ParserRuleContext
		{
			public SingleContext single()
			{
				return GetRuleContext<SingleContext>(0);
			}
			public ManyContext many()
			{
				return GetRuleContext<ManyContext>(0);
			}
			public SingleManyContext singleMany()
			{
				return GetRuleContext<SingleManyContext>(0);
			}
			public SingleManyContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_singleMany; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterSingleMany(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitSingleMany(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitSingleMany(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public SingleManyContext singleMany()
		{
			SingleManyContext _localctx = new SingleManyContext(_ctx, State);
			EnterRule(_localctx, 18, RULE_singleMany);
			try
			{
				State = 156;
				_errHandler.Sync(this);
				switch (Interpreter.AdaptivePredict(_input, 7, _ctx))
				{
					case 1:
						EnterOuterAlt(_localctx, 1);
						{
							State = 146; single();
						}
						break;

					case 2:
						EnterOuterAlt(_localctx, 2);
						{
							State = 147; many();
						}
						break;

					case 3:
						EnterOuterAlt(_localctx, 3);
						{
							State = 148; single();
							State = 149; Match(T__5);
							State = 150; singleMany();
						}
						break;

					case 4:
						EnterOuterAlt(_localctx, 4);
						{
							State = 152; many();
							State = 153; Match(T__5);
							State = 154; singleMany();
						}
						break;
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class SingleContext : ParserRuleContext
		{
			public ITerminalNode SINGLE() { return GetToken(SummariesParser.SINGLE, 0); }
			public TypesContext types()
			{
				return GetRuleContext<TypesContext>(0);
			}
			public KindContext kind()
			{
				return GetRuleContext<KindContext>(0);
			}
			public SingleContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_single; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterSingle(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitSingle(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitSingle(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public SingleContext single()
		{
			SingleContext _localctx = new SingleContext(_ctx, State);
			EnterRule(_localctx, 20, RULE_single);
			try
			{
				State = 176;
				_errHandler.Sync(this);
				switch (Interpreter.AdaptivePredict(_input, 8, _ctx))
				{
					case 1:
						EnterOuterAlt(_localctx, 1);
						{
							State = 158; Match(SINGLE);
						}
						break;

					case 2:
						EnterOuterAlt(_localctx, 2);
						{
							State = 159; Match(SINGLE);
							State = 160; Match(T__1);
							State = 161; types();
							State = 162; Match(T__2);
						}
						break;

					case 3:
						EnterOuterAlt(_localctx, 3);
						{
							State = 164; Match(SINGLE);
							State = 165; Match(T__3);
							State = 166; kind();
							State = 167; Match(T__2);
						}
						break;

					case 4:
						EnterOuterAlt(_localctx, 4);
						{
							State = 169; Match(SINGLE);
							State = 170; Match(T__1);
							State = 171; types();
							State = 172; Match(T__4);
							State = 173; kind();
							State = 174; Match(T__2);
						}
						break;
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class ManyContext : ParserRuleContext
		{
			public ITerminalNode MANY() { return GetToken(SummariesParser.MANY, 0); }
			public TypesContext types()
			{
				return GetRuleContext<TypesContext>(0);
			}
			public KindContext kind()
			{
				return GetRuleContext<KindContext>(0);
			}
			public ManyContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_many; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterMany(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitMany(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitMany(this);
				else return visitor.VisitChildren(this);
			}
		}

		[RuleVersion(0)]
		public ManyContext many()
		{
			ManyContext _localctx = new ManyContext(_ctx, State);
			EnterRule(_localctx, 22, RULE_many);
			try
			{
				State = 196;
				_errHandler.Sync(this);
				switch (Interpreter.AdaptivePredict(_input, 9, _ctx))
				{
					case 1:
						EnterOuterAlt(_localctx, 1);
						{
							State = 178; Match(MANY);
						}
						break;

					case 2:
						EnterOuterAlt(_localctx, 2);
						{
							State = 179; Match(MANY);
							State = 180; Match(T__1);
							State = 181; types();
							State = 182; Match(T__2);
						}
						break;

					case 3:
						EnterOuterAlt(_localctx, 3);
						{
							State = 184; Match(MANY);
							State = 185; Match(T__3);
							State = 186; kind();
							State = 187; Match(T__2);
						}
						break;

					case 4:
						EnterOuterAlt(_localctx, 4);
						{
							State = 189; Match(MANY);
							State = 190; Match(T__1);
							State = 191; types();
							State = 192; Match(T__4);
							State = 193; kind();
							State = 194; Match(T__2);
						}
						break;
				}
			}
			catch (RecognitionException re)
			{
				_localctx.exception = re;
				_errHandler.ReportError(this, re);
				_errHandler.Recover(this, re);
			}
			finally
			{
				ExitRule();
			}
			return _localctx;
		}

		public partial class TypesContext : ParserRuleContext
		{
			public TypeContext type()
			{
				return GetRuleContext<TypeContext>(0);
			}
			public TypesContext types()
			{
				return GetRuleContext<TypesContext>(0);
			}
			public TypesContext(ParserRuleContext parent, int invokingState)
				: base(parent, invokingState)
			{
			}
			public override int RuleIndex { get { return RULE_types; } }
			public override void EnterRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.EnterTypes(this);
			}
			public override void ExitRule(IParseTreeListener listener)
			{
				ISummariesListener typedListener = listener as ISummariesListener;
				if (typedListener != null) typedListener.ExitTypes(this);
			}
			public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
			{
				ISummariesVisitor<TResult> typedVisitor = visitor as ISummariesVisitor<TResult>;
				if (typedVisitor != null) return typedVisitor.VisitTypes(this);
				else return visitor.VisitChildren(this);
			}
		}
